cabal-version:      3.0
name:               haskell-api
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             dominik.kure
maintainer:         dominikkure@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskell-api
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, servant, aeson, servant-server, wai, warp
    hs-source-dirs:   app
    default-language: Haskell2010
